# ci_setup

./: .gitignore  .pre-commit-config.yaml  project_tree.txt  pyproject.toml
.github/workflows/: code-quality.yaml
configs/: __init__.py  configs.py  crawl_config.yaml  logConfigs.py  log_Configs.json  log_configs.py  pdf_repo_config.yaml
logConfigs/: __init__.py  configs.py  logging_configs.json
requirements/: add_requirements.bat  add_requirements.sh  requirements.txt
src/app/: app.py
src/app/utils/: __init__.py  utils.py
src/ci_setup/: __init__.py
tests/: __init__.py  test_main.py
